--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.pushapp.backgroungonmobile">
+    package="ru.pushapp.backgroundonmobile">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SET_WALLPAPER"/>
@@ -13,15 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="ru.pushapp.backgroundonmobile.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SelectedImageActivity" />
-        <activity android:name=".CategoryActivity"></activity>
+        <activity android:name="ru.pushapp.backgroundonmobile.SelectedImageActivity" />
+        <activity android:name="ru.pushapp.backgroundonmobile.CategoryActivity"></activity>
     </application>
 
 </manifest>
